refactored answer handling to exercise specs and finished Thank You page

--- a/templates/question.html
+++ b/templates/question.html
@@ -3,7 +3,7 @@
 
 <h1>{{ question.prompt }}</h1>
 
-<form action="/questions/{{ question_number + 1 }}" method="POST">
+<form action="/answer/{{ question_number }}" method="POST">
 
   <!-- you should have one item like this for every choice -->
   <p>
