--- a/templates/question.html
+++ b/templates/question.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 
+<h2 style="color: red;">{{ get_flashed_messages()[0] }}</h2>
+
 <h1>{{ question.prompt }}</h1>
 
 <form action="/answer/{{ question_number }}" method="POST">
